--- a/FCC-Tribute Page Project/style.css
+++ b/FCC-Tribute Page Project/style.css
@@ -1,3 +1,6 @@
+/*Supernatural Knight font*/
+ @import url('https://fonts.cdnfonts.com/css/supernatural-knight');
+
 body{
     min-height: 2000px;
     background: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/e6f9a7b2-3a2f-431d-94dd-d669d58105b4/d518yih-e75034ee-a8f9-43c6-a597-a8d700070531.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvZTZmOWE3YjItM2EyZi00MzFkLTk0ZGQtZDY2OWQ1ODEwNWI0XC9kNTE4eWloLWU3NTAzNGVlLWE4ZjktNDNjNi1hNTk3LWE4ZDcwMDA3MDUzMS5qcGcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.Bg-M4daxpgv22NQaOzbSXbAvX8xf6B70YIv7ux0zvo8') no-repeat fixed center;
